[package]
name = "astroforge_celestial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
katex-doc = "0.1.0"
nalgebra = "0.26.2"
uom = "0.31.1"
gamma = "0.9.0"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
